syntax = "proto3";

package productInfo;
option go_package = "./productInfopb";

message Product {
    string id = 1;
    string name = 2;
    string description = 3; 
}

message ProductID {
    string value = 1;
}

service ProductInfo {
    rpc addProduct(Product) returns (ProductID);
    rpc getProduct(ProductID) returns (Product);
}

